# inknook

./: .gitignore  .gitleaks.toml  CLAUDE.md  HANDOFF.md  Makefile  README.md
.githooks/: pre-commit  pre-push
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  CHANGELOG.md  Dockerfile  HANDOFF.md  Makefile  QUICKSTART.md  README.md  kubernetes.yaml.example  pyproject.toml  sensors.yaml
backend/.github/workflows/: ci.yml
backend/src/: __init__.py  config.py  dependencies.py  main.py
backend/src/fetchers/: google_calendar.py  home_assistant.py  influxdb.py
backend/src/routers/: cache.py  display.py  health.py
backend/src/services/: cache.py  quote.py  renderer.py
backend/src/services/quotes/: _utils.py  en.py  nl.py
backend/tests/: conftest.py  test_cache.py  test_config.py  test_dependencies.py  test_fetchers.py  test_quotes.py  test_renderer.py  test_routers.py
backend/tests/fixtures/google_calendar/: events.json
backend/tests/fixtures/influxdb/: flux_response.json
backend/tests/integration/: README.md  __init__.py  conftest.py  docker-compose.yml  test_home_assistant_real.py  test_influxdb_real.py
backend/tests/integration/ha-mock-data/api/states/: weather.home.json
esphome/: Makefile  epaper.yaml  inknook.yaml  secrets.yaml.example
hardware/: README.md
kubernetes/: keel.yaml
